--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@amaris/api",
+  "name": "@amacl/api",
   "version": "1.0.0",
   "description": "package based on express for api",
   "author": "Pablo Rebolledo Acosta",
@@ -14,6 +14,7 @@
     "test": "jest --coverage --detectOpenHandles",
     "build": "microbundle"    
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },  
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
