--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest --coverage --detectOpenHandles",
     "build": "microbundle"    
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },  
+  "publishConfig": { "registry": "https://npm.pkg.github.com/@prebolledo" },  
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
